<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:divider="@drawable/divider_vertical"
    android:showDividers="middle"
    android:dividerPadding="@dimen/mp_large"
    android:gravity="center"
    android:padding="@dimen/mp_large"
    tools:context=".fragments.LocationRationaleFragment">

    <ImageView
        android:layout_width="@dimen/cover_vector_medium"
        android:layout_height="@dimen/cover_vector_medium"
        android:src="@drawable/vector_hijabi_happy"
        android:contentDescription="@string/cute_hijabi_happy"/>

    <TextView
        style="@style/typography.importantText"
        android:textAlignment="center"
        android:text="@string/salah_tawqit_needs_to_know"/>

    <!-- Pseudo Button. -->
    <TextView
        android:id="@+id/rationale_grant_button"
        style="@style/button.secondary"
        android:text="@string/grant_location_access"/>

    <TextView
        style="@style/typography.importantText"
        android:textAlignment="center"
        android:text="@string/or_you_can_select_a_location_manually"/>

    <!-- Pseudo Button. -->
    <TextView
        android:id="@+id/rationale_manual_button"
        style="@style/button.tertiary"
        android:text="@string/select_location_manually"/>

</LinearLayout>