<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appbar"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        style="@style/appbar.icon"
        android:src="@drawable/logo_circle"
        android:contentDescription="@string/the_application_logo" />

    <TextView
        android:id="@+id/appbar_title"
        android:layout_weight="1"
        android:layout_width="0dp"
        style="@style/typography.title"
        tools:text="@string/app_name"/>

    <ImageButton
        android:tag="settings"
        style="@style/appbar.menuItem"
        android:id="@+id/appbar_menuButton"
        android:src="@drawable/icon_settings_plain"
        android:contentDescription="@string/go_to_settings"/>

</LinearLayout>